# space_modeling

./: .gitignore  README.md  llm_upg_plan.md  my_upg_plan.md  pyproject.toml  requirements.txt
dynamics/: __init__.py  environment.py  eof.py  experiment_results.py  force_models.py  frames.py  gravity_harmonics.py  propagator.py  sp3.py  space_weather.py
estimation/: __init__.py  batch_ls.py  covariance.py  filters.py  measurements.py
experiments/propagation_tests/: test_propagation_smoke.py
history/1_just_gravity/: Future_prompt.md
history/4_mpti_insights/: results.md  results_per_satellite.csv  results_per_satellite.json
history/prediction_error_growth_addition/: prediction_error_growth_12h_60s.csv  (+1 more)
notebooks/: 1_orbit_propagation_demo.ipynb  2_prediction_error_growth_demo.ipynb  4_sgp4_vs_tie_in_optimization_N2.ipynb  4_trajectory_tie_in_optimization_N2.ipynb  4_trajectory_tie_in_optimization_N2_diff_evol.ipynb  4_trajectory_tie_in_optimization_N2_encreased_optim.ipynb  4_trajectory_tie_in_optimization_N2_mipt_forces.ipynb  4_trajectory_tie_in_optimization_N2_no_velocity.ipynb  4_trajectory_tie_in_optimization_N3.ipynb  4_trajectory_tie_in_optimization_N3_mipt_forces.ipynb  4_trajectory_tie_in_optimization_N3_no_velocity.ipynb  5_atmosphere_model_importance_N2_mipt_forces.ipynb  5_egm2008_degree_importance_N2_mipt_forces.ipynb  orbit_propagation_demo.ipynb  prediction_error_growth_demo.ipynb  trajectory_tie_in_optimization.ipynb
reports/: report_style.css  research_report_1.html  research_report_1.md
tests/: test_experiment_results.py  test_gravity_harmonics.py  test_propagator_integrators.py  test_space_weather.py
visualization/: __init__.py  animation.py  covariance_ellipsoid.py  map_2d.py  orbit_3d.py
