[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "space-modeling"
version = "0.1.0"
description = "High-fidelity small-satellite orbit propagation and determination"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "astropy>=6.0",
  "sgp4>=2.23",
  "filterpy>=1.4.5",
  "plotly>=5.22",
  "matplotlib>=3.9",
  "pyvista>=0.44",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["dynamics*", "estimation*", "visualization*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["experiments"]
